Foundations/04-HTML-Foundations/08-Project-Recipes/AttemptTwo/css/style.css
/* Variables */
:root {
    --purple: #eedfee;
    --dark-purple: #3f3a50;
    --gray: #ddd;
    --blue: #eaf0ff;
}

/* General Styling */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: var(--purple);
    font-size: 1.25rem;
    line-height: 1.5;
}

a {
    text-decoration: none;
    color: var(--dark-purple);
}

/* Banner/landing Styling */
.landing {
    background-image: url('../img/forest.jpg');
    background-position: center;
    height: 35vh;
    text-align: center;
    color: var(--gray);
}

.landing h1 {
    padding: 1.5em 0 0.5em 0;
}

.logo {
    background: var(--purple);
    padding: 0.5rem;
    width: 150px;
    margin: -75px auto;
    display: block;
    border-radius: 100%;
}

/* Card Styling */
.flex {
    display: flex;
    flex-wrap: wrap;
    width: 90%;
    max-width: 1200px;
    margin: 100px auto 75px auto;
    gap: 25px;
    justify-content: space-evenly;
}

.card {
    background-position: center;
    background-size: cover;
    border-radius: 15px;
    box-shadow: 2px 4px 6px rgba(63, 58, 80, 0.75);
    transition-duration: 250ms;
    transition-timing-function: ease;
    text-align: center;
    width: 350px;
    height: 450px;
}

.card:hover {
    transform: translate(-5px, -10px);
    transition-duration: 200ms;
    transition-timing-function: ease;
    box-shadow: 3px 6px 9px rgba(63, 58, 80, 0.5);
}

.card:first-child {
    background-image: url('../img/cakes.jpg');
}
.card:nth-child(2) {
    background-image: url('../img/pies.jpg');
}
.card:last-child {
    background-image: url('../img/cookies.jpg');
}

.card h3 {
    background: linear-gradient(var(--blue) 25%, rgba(0,0,0,0));
    padding: 25px;
    border-radius: 15px 15px 0 0;
    position: relative;
}

.card h3::before {
    content: '';
    width: 175px;
    height: 1px;
    background: var(--dark-purple);
    position: absolute;
    left: 25%;
    top: 75%;
}

/* Footer Styling */
.copyright {
    background: var(--dark-purple);
    color: var(--gray);
    padding: 0.5em;
    text-align: center;
}

/* Recipe Page Styling */
/* About Section */

.about {
    color: var(--dark-purple);
    width: 90%;
    max-width: 1200px;
    margin: 100px auto 75px auto;
    text-indent: 2rem;
    position: relative;
}

.about::after {
    content: '';
    width: 50%;
    height: 1px;
    background: var(--dark-purple);
    position: absolute;
    left: 25%;
    margin-top: 20px;
}

.about img {
    float: right;
    width: 45vw;
    max-width: 600px;
    margin: 0 0 25px 25px;
}

.about p {
    margin-bottom: 25px;
}

/* Ingredients and directions section */

.steps {
    flex-wrap: nowrap;
}

.ingredients {
    flex-basis: 40%;
}

.ingredients li {
    margin-left: 1em;
    margin-top: 15px;
}

.directions {
    flex-basis: 60%;
}

.directions li {
    margin-left: 1.25em;
    margin-top: 15px;
}

/* Media Queries */

@media (max-width: 800px) {
    .landing {
        height: 40vh;
    }
    .about img {
        float: none;
        width: 90vw;
        margin: 0 auto 25px auto;
        display: block;
    }
    .steps {
        flex-wrap: wrap;
    }
    .ingredients,
    .directions {
        flex-basis: 100%;
    }
}

